[package]
name = "graphics-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.16"
wgpu = "0.12.0"
pollster = "0.2.5"
cfg-if = "1.0.0"
cgmath = "0.18.0"
bytemuck = { version = "1.9.0", features = [ "derive" ] }
anyhow = "1.0"
tobj = { version = "3.2.1", features = [
    "async",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies.image]
version = "0.24.1"
default-features = false
features = ["png", "jpeg"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

reqwest = { version = "0.11" }


[[bin]]
name = "audio-visual"
path = "src/main.rs"